@stratusjs/idx/property/list.carousel fix icon spacing

--- a/packages/idx/src/property/list.carousel.component.less
+++ b/packages/idx/src/property/list.carousel.component.less
@@ -119,6 +119,7 @@ stratus-idx-property-list .property-list-carousel {
           line-height: 21px;
 
           md-icon.property-icon {
+            margin-left: 5px;
             height: unset;
             width: unset;
             min-height: unset;
